@@ -95,6 +95,8 @@ MKINSTALLDIRS	= $(scriptdir)/mkinstalldirs
 DPP_DIR		= $(JUGGLERROOT_ABS)/Doozer++
 MKPATH		= $(DPP_DIR)/mk
 MTREE_CMD	= @MTREE_CMD@
+PROFLIB_EXT	= _p
+PROF_OPT_FLAGS	= $(DBG_FLAGS)
 RM_LN		= @RM_LN@
 TWEEKROOT_ABS	= @SAFE_TWEEKROOT_ABS@
 JUGGLERROOT_ABS	= @SAFE_JUGGLERROOT_ABS@
